--- a/DataFlow/Default.Master
+++ b/DataFlow/Default.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Default.master.cs" Inherits="DataFlow.CMSDefault" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Default.Master.cs" Inherits="DataFlow.CMSDefault" %>
 
 <!DOCTYPE html>
 
